# ksimu51

./: AUTHORS  Doxyfile  Makefile  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.in  configure.in.in  ksimu51.kdev4  ksimu51.kdevelop  ksimu51.kdevelop.pcs  ksimu51.kdevses  libtool  tags
src/: KSimu51_NameS.h  KSimu51_NameS.h~  Makefile  Makefile.am  Makefile.in  MyKApplication.cpp  MyKApplication.h  MyKApplication.moc.cpp  ksimu51  ksimu51.cpp  ksimu51.cpp~  ksimu51.desktop  ksimu51.h  ksimu51.h~  ksimu51.lsm  ksimu51.moc  ksimu51ui.rc  main.cpp
src/.deps/: MyKApplication.Po  MyKApplication.moc.Po  ksimu51.Po  main.Po
src/components/: Components.cpp  Components.h  Components.lo  ComponentsLib.cpp  ComponentsLib.h  ComponentsLib.lo  ComponentsLib.moc.cpp  ComponentsLib.moc.lo  ExternalComponentW.cpp  ExternalComponentW.cpp~  ExternalComponentW.h  ExternalComponentW.h~  ExternalComponentW.moc.cpp  Makefile  Makefile.am  Makefile.in
src/components/.deps/: Components.Plo  ComponentsLib.Plo  ComponentsLib.moc.Plo  ExternalComponentW.Plo  ExternalComponentW.moc.Plo
src/components/.libs/: libBaseComponents.la
src/components/displays/: CharacterDotMatrixLCD.cpp  CharacterDotMatrixLCD.h  CharacterDotMatrixLCD.moc.cpp  CharacterDotMatrixLCD.moc.lo  DisplaysC.cpp  DisplaysC.h  Makefile  Makefile.am  Makefile.in
src/components/instruments/: InstrumentsC.cpp  InstrumentsC.h  LogicAnalyzerQListBoxItems.cpp  LogicAnalyzerQListBoxItems.cpp_o  LogicAnalyzerQListBoxItems.cpp~  LogicAnalyzerQListBoxItems.h  LogicAnalyzerQListBoxItems.h_o  LogicAnalyzerQListBoxItems.h~  LogicAnalyzerW.cpp  LogicAnalyzerW.cpp~  LogicAnalyzerW.h  LogicAnalyzerW.h~  LogicAnalyzerW.lo  LogicAnalyzerW.moc.cpp  LogicAnalyzerW.moc.lo  LogicGeneratorW.cpp  LogicGeneratorW.cpp~  LogicGeneratorW.h  LogicGeneratorW.lo  LogicGeneratorW.moc.cpp  Makefile  Makefile.am  Makefile.in
src/components/keysButtons/: Keypad12W.cpp  Keypad12W.cpp~  Keypad12W.h  Keypad12W.moc.cpp  KeysButtonsC.cpp  KeysButtonsC.h  KeysButtonsC.lo  Makefile  Makefile.am  Makefile.in  libKeysButtons.la
src/components/logic74/: BusTransceiver8W.cpp  BusTransceiver8W.h  BusTransceiver8W.lo  BusTransceiver8W.moc.cpp  Decoder3To8W.cpp  Decoder3To8W.h  Decoder3To8W.moc.cpp  Decoder3To8W.moc.lo  Gate2ANDW.cpp  Gate2ANDW.h  Gate2ANDW.moc.cpp  Gate2ANDW.moc.lo  Gate2NANDW.cpp  Gate2NANDW.h  Gate2NANDW.moc.cpp  Gate2NORW.cpp  Gate2NORW.h  Gate2NORW.moc.cpp  Gate2NORW.moc.lo  Gate2ORW.cpp  Gate2ORW.h  Gate2ORW.moc.cpp  Latch8W.cpp  Latch8W.h  Latch8W.lo  Latch8W.moc.cpp  Latch8W.moc.lo  Logic74B.cpp  Logic74B.cpp~  Logic74B.h  Logic74B.lo  Logic74B.moc.cpp  Logic74C.cpp  Logic74C.h  Logic74C.lo  Makefile  Makefile.am  Makefile.in  and2.xpm  libLogic74.la  (+9 more)
src/components/logicGALPAL/: Gal22V10W.cpp  Gal22V10W.h  Gal22V10W.lo  Gal22V10W.moc.cpp  Gal22V10W.moc.lo  IspGAL22V10W.cpp  IspGAL22V10W.h  IspGAL22V10W.lo  IspGAL22V10W.moc.cpp  LogicGALPAL_C.cpp  LogicGALPAL_C.h  LogicGALPAL_C.lo  Makefile  Makefile.am  Makefile.in
src/components/memory/: ExternalRAMW.cpp  ExternalRAMW.cpp~  ExternalRAMW.h  ExternalRAMW.lo  ExternalRAMW.moc.cpp  ExternalRAMW.moc.lo  Makefile  Makefile.am  Makefile.in  MemoryC.cpp  MemoryC.h  MemoryC.lo
src/components/misc/: Makefile  Makefile.am  Makefile.in  MiscC.cpp  MiscC.h  MiscC.lo  libmiscComponents.la
src/processors/: AnalogInputPin.cpp  AnalogInputPin.h  AnalogInputPin.lo  AnalogInputPinList.cpp  AnalogInputPinList.h  ExternalCycle.cpp  ExternalCycle.cpp~  ExternalCycle.h  ExternalCycle.h~  ExternalCycle.lo  Global_NameS.h  Global_NameS.h~  I8031.cpp  I8031.cpp~  I8031.h  I8031.h~  I8031.lo  I8031_ADConverter.cpp  I8031_ADConverter.h  I8031_NameS.h  I8031_NameS.h~  I8031_Xram.cpp  I8031_Xram.h  I8031_Xram.lo  I8032.cpp  I8032.cpp~  I8032.h  I8032.h~  I8032_NameS.h  I8032_NameS.h~  I8051.cpp  I8051.cpp~  I8051.h  I8051.h~  I8051_ExternalCycle.cpp  I8051_ExternalCycle.h  I8051_Flash.cpp  I8051_Flash.h  I8051_Flash.lo  I8051_NameS.h  (+57 more)
src/processors/.deps/: AnalogInputPin.Plo  AnalogInputPinList.Plo  ExternalCycle.Plo  I8031.Plo  I8031_ADConverter.Plo  I8031_Xram.Plo  I8032.Plo  I8051.Plo  I8051_ExternalCycle.Plo  I8051_Flash.Plo  I8052.Plo  I80C31.Plo  I80C32.Plo  I80C51.Plo  I80C52.Plo  IOPin.Plo  IOPinList.Plo  InstructionSet.Plo  InternalRAM.Plo  Memory.Plo  SerialPort.Plo  TimersCounters.Plo  TimersCounters2.Plo
src/processors/Atmel/: Makefile  (+23 more)
src/processorsW/: AssemblerSourceW.cpp  AssemblerSourceW.cpp~  AssemblerSourceW.h  AssemblerSourceW.h~  AssemblerSourceW.moc.cpp  BitAddressableAreaW.cpp  BitAddressableAreaW.cpp~  BitAddressableAreaW.h  BitAddressableAreaW.h~  BitAddressableAreaW.lo  BitAddressableAreaW.moc.cpp  BitAddressableAreaW.moc.lo  BitChangeBreakpoint.cpp  BitChangeBreakpoint.h  DisassembleW.cpp  DisassembleW.cpp~  DisassembleW.h  DisassembleW.h~  DisassembleW.moc.cpp  DisassembleW.moc.lo  ExternalW.cpp  ExternalW.cpp~  ExternalW.h  ExternalW.h~  ExternalW.lo  ExternalW.moc.cpp  I51BaseADConverterW.cpp  I51BaseADConverterW.cpp~  I51BaseADConverterW.h  I51BaseADConverterW.h~  I51BaseADConverterW.lo  I51BaseADConverterW.moc.cpp  I51BaseADConverterW.moc.lo  I51BaseInternalFLASHW.cpp  I51BaseInternalFLASHW.h  I51BaseInternalFLASHW.moc.cpp  I51BaseInternalIRAMW.cpp  I51BaseInternalIRAMW.cpp~  I51BaseInternalIRAMW.h  I51BaseInternalIRAMW.h~  (+83 more)
src/share/: IndexedKDoubleNumInput.cpp  IndexedKDoubleNumInput.h  IndexedKDoubleNumInput.lo  IndexedKDoubleNumInput.moc.cpp  IndexedKDoubleNumInput.moc.lo  LedIndicatorGrid.cpp  LedIndicatorGrid.h  Makefile  Makefile.am  Makefile.in  MyQTableItem.cpp  MyQTableItem.cpp~  MyQTableItem.h  MyQTableItem.h~  NumQString.cpp  NumQString.cpp~  NumQString.h  NumQString.h~  NumQTable.cpp  NumQTable.cpp~  NumQTable.h  NumQTable.h~  NumQTable.lo  NumQTable.moc.cpp  ShareMainW.cpp  ShareMainW.cpp~  ShareMainW.h  ShareMainW.h~  ShareMainW.lo  ShareMainW.moc.cpp  ShareMainW.moc.lo  WorkspaceMainW.cpp  WorkspaceMainW.cpp~  WorkspaceMainW.h  WorkspaceMainW.h~  WorkspaceMainW.moc.cpp  WorkspaceMainW.moc.lo  conversium.cpp  conversium.h  conversium.lo  (+1 more)
(+647 files in other folders)
