INCLUDES = $(all_includes)
METASOURCES = AUTO
libShare_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libShare.la
noinst_HEADERS = IndexedKDoubleNumInput.h LedIndicatorGrid.h MyQTableItem.h \
	NumQString.h NumQTable.h ShareMainW.h WorkspaceMainW.h conversium.h
libShare_la_SOURCES = IndexedKDoubleNumInput.cpp LedIndicatorGrid.cpp \
	MyQTableItem.cpp NumQString.cpp NumQTable.cpp ShareMainW.cpp WorkspaceMainW.cpp \
	conversium.cpp
