INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libInstruments.la
libInstruments_la_LDFLAGS = $(all_libraries)
noinst_HEADERS = InstrumentsC.h LogicAnalyzerQListBoxItems.h LogicAnalyzerW.h \
	LogicGeneratorW.h
libInstruments_la_SOURCES = InstrumentsC.cpp LogicAnalyzerQListBoxItems.cpp \
	LogicAnalyzerW.cpp LogicGeneratorW.cpp
