INCLUDES = $(all_includes)
METASOURCES = AUTO
libLogic74_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libLogic74.la
libLogic74_la_SOURCES = BusTransceiver8W.cpp Decoder3To8W.cpp Gate2ANDW.cpp \
	Gate2NANDW.cpp Gate2NORW.cpp Gate2ORW.cpp Latch8W.cpp Logic74B.cpp Logic74C.cpp
noinst_HEADERS = BusTransceiver8W.h Decoder3To8W.h Gate2ANDW.h Gate2NANDW.h \
	Gate2NORW.h Gate2ORW.h Latch8W.h Logic74B.h Logic74C.h
