INCLUDES = $(all_includes)
METASOURCES = AUTO
libAtmelProcessors_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libAtmelProcessors.la
noinst_HEADERS = T89C51RD2_32.h T89C51RD2_48.h T89C51RD2_48_ExternalCycle.h \
	T89C51RD2_48_NameS.h T89C51RD2x.h T89C51RD2x_NameS.h
libAtmelProcessors_la_SOURCES = T89C51RD2_32.cpp T89C51RD2_48.cpp \
	T89C51RD2_48_ExternalCycle.cpp T89C51RD2x.cpp
