INCLUDES = $(all_includes)
METASOURCES = AUTO
libMaximProcessors_la_LDFLAGS = $(all_libraries)
noinst_LTLIBRARIES = libMaximProcessors.la
noinst_HEADERS = MAX7651.h MAX7652.h MAX765x.h MAX765x_ExternalCycle.h \
	MAX765x_NameS.h MAX765x_TimersCounters.h
libMaximProcessors_la_SOURCES = MAX7651.cpp MAX7652.cpp MAX765x.cpp \
	MAX765x_ExternalCycle.cpp MAX765x_TimersCounters.cpp
