INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libintelW.la
libintelW_la_LDFLAGS = $(all_libraries)
noinst_HEADERS = Intel8031W.h Intel8032W.h Intel8051W.h Intel8052W.h \
	Intel80C31W.h Intel80C32W.h Intel80C51W.h Intel80C52W.h IntelP.h
libintelW_la_SOURCES = Intel8031W.cpp Intel8032W.cpp Intel8051W.cpp \
	Intel8052W.cpp Intel80C31W.cpp Intel80C32W.cpp Intel80C51W.cpp Intel80C52W.cpp \
	IntelP.cpp
